--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "usual",
   "version": "1.0.0",
-  "description": "A set a generic class/collection objects for creating models",
-  "main": "index.js",
+  "description": "Very usual base model and collection for javascript",
+  "main": "package/index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --hot --inline --open",
-    "test": "mocha"
+    "start:dev": "webpack-dev-server --hot --inline --open"
   },
-  "author": "",
+  "author": "Anson Airoldi <ansonairoldi@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "eventemitter2": "^5.0.1",
     "extend": "^3.0.1",
+  },
+  "devDependencies" : {
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^5.0.0",
     "mocha-loader": "^1.1.3",
