--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "usual",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Very usual base model and collection for javascript",
+  "author": "Anson Airoldi <ansonairoldi@gmail.com>",
+  "homepage": "https://github.com/ansonlouis/usual",
+  "repository" : "github:ansonlouis/usual",
   "main": "package/index.js",
   "scripts": {
     "start:dev": "webpack-dev-server --inline --open"
   },
-  "author": "Anson Airoldi <ansonairoldi@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "eventemitter2": "^5.0.1",
     "extend": "^3.0.1"
@@ -19,5 +21,8 @@
     "script-ext-html-webpack-plugin": "^1.8.8",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
-  }
+  },
+  "files" : [
+    "package/"
+  ]
 }
