--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "usual",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Very usual base model and collection for javascript",
   "author": "Anson Airoldi <ansonairoldi@gmail.com>",
   "homepage": "https://github.com/ansonlouis/usual",
-  "repository" : "github:ansonlouis/usual",
+  "repository": "github:ansonlouis/usual",
   "main": "package/index.js",
   "scripts": {
     "start:dev": "webpack-dev-server --inline --open"
@@ -12,17 +12,19 @@
   "license": "MIT",
   "dependencies": {
     "eventemitter2": "^5.0.1",
-    "extend": "^3.0.1"
+    "extend": "^3.0.2"
   },
-  "devDependencies" : {
-    "html-webpack-plugin": "^2.30.1",
-    "mocha": "^5.0.0",
-    "mocha-loader": "^1.1.3",
-    "script-ext-html-webpack-plugin": "^1.8.8",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
+    "mocha-loader": "^2.0.0",
+    "script-ext-html-webpack-plugin": "^2.0.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
-  "files" : [
+  "files": [
     "package/"
   ]
 }
